[project]
name = "study-agent"
version = "0.1.0"
description = "Ag공부한 내용을 정리해두는 레포"
authors = [
    {name = "nonsingal007",email = "nonsignal007@t3q.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<=3.11"
dependencies = [
    "langchain-core (>=0.3.48,<0.4.0)",
    "langchain-openai (>=0.3.10,<0.4.0)",
    "langgraph (>=0.3.20,<0.4.0)",
    "langchain (>=0.3.21,<0.4.0)",
    "langchain-huggingface (>=0.1.2,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"

